Added image and updated Readme

--- a/starter/teamProfile.html
+++ b/starter/teamProfile.html
@@ -32,9 +32,9 @@
         </div>
         <div class="card-body">
             <ul class="list-group">
-                <li class="list-group-item">ID: 7865</li>
+                <li class="list-group-item">ID: 6778</li>
                 <li class="list-group-item">Email: <a href="mailto:ben@abc.com">ben@abc.com</a></li>
-                <li class="list-group-item">Office number: 1209877678</li>
+                <li class="list-group-item">Office number: 12334</li>
             </ul>
         </div>
     </div>
@@ -46,9 +46,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 0975</li>
+            <li class="list-group-item">ID: 5678</li>
             <li class="list-group-item">Email: <a href="mailto:john@abc.com">john@abc.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/john@github" target="_blank" rel="noopener noreferrer">john@github</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/john@gitHub" target="_blank" rel="noopener noreferrer">john@gitHub</a></li>
         </ul>
     </div>
 </div>
@@ -60,9 +60,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4567</li>
+            <li class="list-group-item">ID: 3456</li>
             <li class="list-group-item">Email: <a href="mailto:ken@abc.com">ken@abc.com</a></li>
-            <li class="list-group-item">School: Havard University </li>
+            <li class="list-group-item">School: Havard University</li>
         </ul>
     </div>
 </div>
